--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,22 @@
 /*  your css code here. If applicable */
+.main-container{
+	background-color: #f5f5f5;
+	padding: 10px;
+}
+.testimonials{
+	border: 1px solid black;
+	background-color: #fff;
+	padding: 1px;
+	margin: 15px;
+}
+
+.text{
+	font-size: 14px;
+	padding-left: 10px;
+}
+
+.author{
+	text-align: right;
+	font-style: italic;
+	padding-right: 13px;
+}
